# jetblack-options

./: .pylintrc  DEVELOPMENT-unix.md  README.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-pandas.txt  setup.py
demo/: index.html  package-lock.json  package.json  vite.config.ts
demo/src/: App.tsx  RoutedApp.tsx  main.tsx  nestedRoutes.tsx  types.ts
docs/: 404.html  index.html
docs/assets/: index--et2SVHe.js  index-0PcE7UAM.js  index-95MJgx2n.js  index-Co-y6s_L.css  index-DaXPYdIt.js  index-Iz1dMwY2.js  index-KtHCfwjC.js  index-RJy9WWik.js  index-VtkVpBun.js  index-W6eTAFA6.js  index-mbkpW6gg.css  index-nPCKXhgz.js
docs/demo/: index.html
docs/generalized-black-scholes/: index.html
docs/getting-started/: index.html
docs/installation/: index.html
docs/numeric-greeks/: index.html
docs/pandas/: index.html
docs/search/: search_index.json
documentation/: generalized-black-scholes.md  getting-started.md  index.md  installation.md  numeric-greeks.md  pandas.md
documentation/api/: jetblack_options.american.md  jetblack_options.european.md  jetblack_options.trees.md
documentation/css/: custom.css
jetblack_options/: Digitals.vba  Distributions.vba  PlainVanilla.vba  american.py  asian_options.py  barriers.py  black_scholes_merton.py  digitals.py  distributions.py  implied_volatility.py  lookback.py  numeric_greeks.py  numeric_greeks_with_dividend_yield.py  numeric_greeks_without_carry.py  plain_vanilla.py  types.py
jetblack_options/american/: american.py  barone_adesi_whaley.py  bjerksund_stensland_1993.py  bjerksund_stensland_2002.py
jetblack_options/barriers/: discrete_adjusted.py
jetblack_options/european/: black_76.py  black_scholes_73.py  black_scholes_merton.py  garman_kolhagen.py  generalised_black_scholes.py  implied_volatility.py  plain_vanilla.py
jetblack_options/numeric_greeks/: with_carry.py  with_dividend_yield.py  without_carry.py
jetblack_options/perpetual/: analytic.py  (+1 more)
scratch/: BlackScholesMerton.ipynb  Example1.ipynb  Example2.ipynb  Vector1.ipynb  Vector2.ipynb  adhoc.py  pandas_numpy.py  vector1.py
tests/: test_distributions.py  utils.py
(+252 files in other folders)
