[tool.poetry]
name = "jetblack-options"
version = "0.1.0"
description = "A collection of options formulae"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
readme = "README.md"
packages = [
    { include = "jetblack_options" },
]
repository = "https://github.com/rob-blackbourn/jetblack-finance"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

[tool.poetry.dev-dependencies]
pandas = "1.5.2"
scipy = "1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
