[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jetblack-options"
version = "1.0.0"
authors = [
  { name="Rob Blackbourn", email="rob.blackbourn@gmail.com" },
]
description = "Reference implementations for option pricing formula"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/rob-blackbourn/jetblack-options"
Issues = "https://github.com/rob-blackbourn/jetblack-options/issues"

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest"
]
docs = [
    "mkdocs-material==9.4.14",
    "jetblack-markdown==1.2.0",
]
pandas = [
    "jupyter==1.0.0",
    "pandas==2.1.3",
    "plotly==5.18.0",
    "scipy==1.11.3",
]
